pins de acessibilidade
adicionados pins de acessibilidade na tela adicionar comentário

--- a/src/pages/mapa/index.html
+++ b/src/pages/mapa/index.html
@@ -160,6 +160,7 @@
                     <input type="file" id="comment-image" multiple style="display:none">
                     <ul id="file-list"></ul>
                 </div>
+                <button id="btn-add-accessibility-pin" type="button" style="margin-top: 10px; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">Adicionar Pin de Acessibilidade</button>
                 <div style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 10px;">
                     <button type="button" class="submit-btn back-btn"
                         style="background-color: #ccc; color: #333;">Cancelar</button>
