mundanças de imagem e regras de upload

--- a/src/pages/auth/index.html
+++ b/src/pages/auth/index.html
@@ -74,10 +74,6 @@
       </div>
     </section>
 
-    <section class="hero-panel">
-      <img src="/assets/img/global/login-hero.png" alt="Painel ilustrativo" />
-    </section>
-
     <div id="forgotPasswordModal" class="forgot-modal" style="display: none">
       <section class="login-container">
         <div class="login-card" id="forgot-card">
@@ -112,7 +108,7 @@
       </section>
 
       <section class="hero-panel">
-        <img src="/assets/img/global/login-hero.png" alt="Painel ilustrativo" />
+        <img src="/assets/img/global/Background-login.svg" alt="Painel ilustrativo" />
       </section>
     </div>
 
