--- a/src/pages/mapa/index.html
+++ b/src/pages/mapa/index.html
@@ -153,6 +153,10 @@
                     <ul id="file-list"></ul>
                 </div>
                 <button id="btn-add-accessibility-pin" type="button" style="margin-top: 10px; padding: 10px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer;">Adicionar Pin de Acessibilidade</button>
+                <div id="accessibility-pins-selection-area" style="display: none;">
+                    <div id="pins-list-from-api"></div>
+                    <input type="hidden" id="selected-pin-id">
+                </div>
                 <div style="display: flex; gap: 10px; justify-content: flex-end; margin-top: 10px;">
                     <button type="button" class="submit-btn back-btn"
                         style="background-color: #ccc; color: #333;">Cancelar</button>
